--- a/_includes/swc/schedule.html
+++ b/_includes/swc/schedule.html
@@ -3,30 +3,48 @@
     <h3>Day 1</h3>
     <table class="table table-striped">
       <tr> <td>Before</td> <td><a href="{{ site.pre_survey }}{{ site.github.project_title }}" target="_blank" rel="noopener noreferrer">Pre-workshop survey</a> </td> </tr>
-      <tr> <td>09:00</td>  <td>Automating Tasks with the Unix Shell</td> </tr>
-      <tr> <td>10:30</td>  <td>Morning break</td> </tr>
-      <tr> <td>11:00</td>  <td>Automating Tasks with the Unix Shell (Continued)</td> </tr>
-      <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
-      <tr> <td>13:00</td>  <td>Building Programs with Python</td> </tr>
-      <tr> <td>14:30</td>  <td>Afternoon break</td> </tr>
-      <tr> <td>15:00</td>  <td>Building Programs with Python (Continued)</td> </tr>
-      <tr> <td>16:00</td>  <td>Wrap-up</td> </tr>
+      <tr> <td>09:00</td>  <td>Introduction to R and RStudio</td> </tr>
+      <tr> <td>09:55</td>  <td>Short Break</td> </tr>
+      <tr> <td>10:00</td>  <td>Project Management With RStudio</td> </tr>
+      <tr> <td>10:30</td>  <td>Seeking Help</td> </tr>
+      <tr> <td>10:50</td>  <td>Longer Break</td> </tr>
+      <tr> <td>11:00</td>  <td>Data Structures</td> </tr>
+      <tr> <td>11:55</td>  <td>Morning Feedback</td> </tr>
+      <tr> <td>12:00</td>  <td>Lunch Break</td> </tr>
+      <tr> <td>13:00</td>  <td>Exploring Data Frames</td> </tr>
+      <tr> <td>13:30</td>  <td>Short Break</td> </tr>
+      <tr> <td>13:35</td>  <td>Subsetting Data</td> </tr>
+      <tr> <td>14:25</td>  <td>Longer break</td> </tr>
+      <tr> <td>14:35</td>  <td>Control Flow</td> </tr>
+      <tr> <td>15:40</td>  <td>Short break</td> </tr>
+      <tr> <td>15:45</td>  <td>Creating Publication-Quality Graphics with ggplot2, Pt. 1</td> </tr>
+      <tr> <td>16:15</td>  <td>Wrap-up</td> </tr>
       <tr> <td>16:30</td>  <td>END</td> </tr>
     </table>
   </div>
   <div class="col-md-6">
     <h3>Day 2</h3>
     <table class="table table-striped">
-      <tr> <td>09:00</td>  <td>Version Control with Git</td> </tr>
-      <tr> <td>10:30</td>  <td>Morning break</td> </tr>
-      <tr> <td>11:00</td>  <td>Version Control with Git (Continued)</td> </tr>
-      <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
-      <tr> <td>13:00</td>  <td>Managing Data with SQL</td> </tr>
-      <tr> <td>14:30</td>  <td>Afternoon break</td> </tr>
-      <tr> <td>15:00</td>  <td>Managing Data with SQL (Continued)</td> </tr>
-      <tr> <td>16:00</td>  <td>Wrap-up</td> </tr>
-      <tr> <td>16:30</td>  <td><a href="{{ site.post_survey }}{{ site.github.project_title }}" target="_blank" rel="noopener noreferrer">Post-workshop Survey</a></td> </tr>
-      <tr> <td>16:40</td>  <td>END</td> </tr>
+      <tr> <td>09:00</td>  <td>Refresh from Day One</td> </tr>
+      <tr> <td>09:05</td>  <td>Creating Publication-Quality Graphics with ggplot2, Pt. 2</td> </tr>
+      <tr> <td>09:55</td>  <td>Short Break</td> </tr>
+      <tr> <td>10:00</td>  <td>Vectorization</td> </tr>
+      <tr> <td>10:25</td>  <td>Functions Explained, Pt. 1</td> </tr>
+      <tr> <td>10:00</td>  <td>Longer Break/td> </tr>
+      <tr> <td>11:10</td>  <td>Functions Explained, Pt. 2</td> </tr>
+      <tr> <td>11:35</td>  <td>Writing Data</td> </tr>
+      <tr> <td>11:55</td>  <td>Morning Feedback</td> </tr>
+      <tr> <td>12:00</td>  <td>Lunch Break</td> </tr>
+      <tr> <td>13:00</td>  <td>Data frame Manipulation with dplyr</td> </tr>
+      <tr> <td>13:55</td>  <td>Short Break</td> </tr>
+      <tr> <td>14:00</td>  <td>Data frame Manipulation with tidyr</td> </tr>
+      <tr> <td>14:45</td>  <td>Longer break</td> </tr>
+      <tr> <td>14:55</td>  <td>Producing Reports With knitr, Pt. 1</td> </tr>
+      <tr> <td>15:40</td>  <td>Short break</td> </tr>
+      <tr> <td>15:45</td>  <td>Producing Reports With knitr, Pt. 2</td> </tr>
+      <tr> <td>16:15</td>  <td>Wrap-up</td> </tr>
+      <tr> <td>16:20</td>  <td><a href="{{ site.post_survey }}{{ site.github.project_title }}" target="_blank" rel="noopener noreferrer">Post-workshop Survey</a></td> </tr>
+      <tr> <td>16:30</td>  <td>END</td> </tr>
     </table>
   </div>
 </div>
